# bookstore

./: .env.debug  .env.dev  Dockerfile  README.md  alembic.ini  debug_main.py  docker-compose.yml  pyproject.toml
db_scripts/: dev.sql
docker_config/: .env.dev
migrations/: env.py
migrations/versions/: 9b8e0cc2bfc1_nin.py
prometheus_data/: config.yaml
web_api/: main.py
web_api/core/: config.py  logs.py
web_api/db/: __init__.py  models.py  session.py
web_api/exceptions/: __init__.py  custom_exceptions.py
web_api/lib/: __init__.py  paginator.py
web_api/middlewares/: handlers.py
web_api/middlewares/exceptions/: exception.py
web_api/repositories/: __init__.py  base_repository.py
web_api/repositories/book_repository/: __init__.py  exceptions.py  lib.py  repository.py
web_api/repositories/user_reppository/: __init__.py  exceptions.py  repository.py
web_api/routers/: __init__.py  default_model_config.py
web_api/routers/book_router/: book.py  lib.py  models.py  router.py
web_api/routers/order_router/: __init__.py  helpers.py  models.py  order.py  router.py
web_api/routers/user_router/: lib.py  models.py  router.py  user.py
web_api/security/: __init__.py  auth.py  hashing.py
web_api/shared/: __init__.py  enums.py  lib.py  models.py  paginator.py
